<resources>
    <string name="app_name">API_001</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="city_name">City Name</string>
    <string name="country_name">Country Name</string>
    <string name="delete">Delete</string>
    <string name="memolab">MemoLab</string>
    <string name="no_more_deadlines">No more DEADLINES!</string>
    <string name="subject">Subject</string>
    <string name="due">Due</string>
    <string name="course">Course</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>